src/components/toolbox/table/table.css
@import '../../../app/mixins.css';

.row {
  align-items: center;
  display: flex;
  flex-wrap: nowrap;
  padding: 0 var(--vertical-padding-l);
  margin: 0 !important;
  position: relative;

  &:not(.header) {
    &::before,
    &:not(:last-of-type)::after {
      background-color: var(--color-platinum);
      content: '';
      height: 1px;
      left: 20px;
      position: absolute;
      right: 20px;
    }

    &::after {
      bottom: 0;
    }

    &::before {
      display: none;
      left: 0;
      right: 0;
      top: -1px;
    }

    &:hover {
      background-color: var(--color-rows-hover);
      text-decoration: none;

      &::before {
        display: block;
      }

      &::after {
        display: block;
        left: 0;
        right: 0;
      }
    }
  }

  & > * {
    @mixin contentNormal;

    align-items: center;
    box-sizing: border-box;
    color: var(--color-maastricht-blue);
    display: flex;
    justify-content: flex-start;
    padding: 20px;
    text-align: left;

    &:last-child {
      justify-content: flex-end;
      text-align: right;
    }
  }
}

.header {
  padding: 0 var(--vertical-padding-l);
  margin: 0 !important;

  & > * {
    @mixin contentNormal bold;

    color: var(--color-maastricht-blue);
    padding: 16px 20px;
  }
}

.sortAsc,
.sortDesc,
.sortInactive {
  cursor: pointer;

  &::before,
  &::after {
    display: inline-block;
    content: " ";
    position: absolute;
    right: -13px;
    width: 0;
    height: 0;
    border: 4px solid transparent;
    transition: all var(--animation-speed-fastest) linear;
    transform-origin: 5px 2px;
  }
}

.sortAsc,
.sortDesc {
  &::after {
    top: 7px;
    border-top-color: var(--color-content-light);
  }
}

.sortAsc::after {
  transform: rotate(180deg);
}

.titleWrapper {
  position: relative;
}

.sortInactive {
  &::after {
    bottom: 0;
    border-top-color: var(--color-ghost);
  }

  &::before {
    top: 0;
    border-bottom-color: var(--color-ghost);
  }
}

.clickable {
  cursor: pointer;
}

.loadingRow {
  height: 40px;
  padding: 0px 0 20px;
  display: none;

  & .loadingColumn {
    height: 40px;
    border: solid 10px transparent;
    box-sizing: border-box;
    overflow: hidden;

    &::after {
      content: '';
      display: block;
      width: 100%;
      height: 100%;
      background: var(--color-platinum);
      background: linear-gradient(90deg, transparent 0%, var(--color-platinum) 50%, transparent 100%);
      animation: glare 1s infinite linear;
      animation-direction: alternate;
    }
  }
}

.emptyState {
  opacity: 0;
  animation: fadeIn 1 150ms linear;
  animation-fill-mode: forwards;
}

.loadMore {
  background-color: var(--color-white) !important;
  color: var(--color-link-active) !important;
  font-weight: var(--font-weight-semi-bold) !important;
}

@keyframes glare {
  0% {
    transform: translateX(-101%);
  }

  100% {
    transform: translateX(101%);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@media (--large-viewport) {
  .row {
    flex-wrap: inherit;
  }
}

